--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#configuracion base de datos en memoria
+#configuracion base de datos en memoria H2
 
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
