--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 #configuracion base de datos en memoria H2
-
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.url=jdbc:h2:mem:controlFacturasProveedores
+
+#configuracion Email Sender
+email.sender=evangelistediego@gmail.com
+email.password=sadiyspbdrtnzlcp
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
